K8s/app_dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zas-web
  namespace: ${NAMESPACE}zasanddas
  labels:
    app: zas-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zas-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
        maxUnavailable: 1
  template:
    metadata:
      labels:
        app: zas-web
    spec:
      containers:
      - name: zas-web
        image: nhowell02/zasanddas:$BUILD_NUMBER
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
