K8s/grafana-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zasanddas-grafana-deployment
  namespace: zasanddas
  labels:
    app: zasanddas-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zasanddas-grafana
  template:
    metadata:
      labels:
        app: zasanddas-grafana
    spec:
      volumes:
      - name: grafana-config
        configMap:
          name: zasanddas-grafana-config
      containers:
      - name: zasanddas-grafana
        volumeMounts:
        - mountPath: /etc/grafana/provisioning/datasources/ds.yaml
          subPath: config
          name: grafana-config
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
