K8s/loki-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zas-loki
  namespace: zasanddas
  labels:
    app: zas-loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zas-loki
  template:
    metadata:
      labels:
        app: zas-loki
    spec:
      containers:
      - name: zas-loki
        image: grafana/loki:latest
        ports:
        - containerPort: 3100
        - containerPort: 9095
---
