K8s/otel-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zas-otel
  namespace: zassanddas
  labels:
    app: zas-otel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zas-otel
  template:
    metadata:
      labels:
        app: zas-otel
    spec:
      volumes:
      - name: otel-config
        configMap:
          name: zas-otel-config
      containers:
      - name: zas-otel
        volumeMounts:
        - mountPath: /etc/otelcol-contrib/config.yaml
          subPath: config
          name: otel-config
        image: otel/opentelemetry-collector-contrib:0.119.0
        ports:
        - containerPort: 4317
        - containerPort: 4318
        - containerPort: 55679
        - containerPort: 8889
---
