K8s/app_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: zas-web-svc
  namespace: ${NAMESPACE}zasanddas
spec:
  selector:
    app: zas-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
