K8s/blackbox-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: zas-blackbox-svc
  namespace: ${NAMESPACE}zasanddas
spec:
  selector:
    app: zas-blackbox
  ports:
    - protocol: TCP
      name: prom
      port: 9115
      targetPort: 9115
---
