K8s/db_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: zas-db-svc
  namespace: zasanddas
spec:
  selector:
    app: zas-db-dep
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
