K8s/grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: chris-grafana-svc
  namespace: chris-proj06
spec:
  selector:
    app: chris-grafana
  ports:
    - protocol: TCP
      name: grafana
      port: 6000
      targetPort: 3000
---
