K8s/loki-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: zas-loki-svc
  namespace: ${NAMESPACE}zasanddas
spec:
  selector:
    app: zas-loki
  ports:
    - protocol: TCP
      name: loki
      port: 3100
      targetPort: 3100
    - protocol: TCP
      name: other
      port: 9095
      targetPort: 9095
---
