K8s/otel-ser.yml
apiVersion: v1
kind: Service
metadata:
  name: zas-otel-ser
  namespace: zasanddas
spec:
  selector:
    app: zas-otel
  ports:
    - name: prometh
      protocol: TCP
      port: 8889
      targetPort: 8889
    - name: lok
      protocol: TCP
      port: 4317
      targetPort: 4317
    - name: idk
      protocol: TCP
      port: 4318
      targetPort: 4318
