K8s/otel-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: chris-otel-svc
  namespace: chris-proj06
spec:
  selector:
    app: chris-otel
  ports:
    - protocol: TCP
      name: grpc
      port: 4317
      targetPort: 4317
    - protocol: TCP
      name: http
      port: 4318
      targetPort: 4318
    - protocol: TCP
      name: other
      port: 55679
      targetPort: 55679
    - protocol: TCP
      name: prometheus
      port: 8889
      targetPort: 8889
---
