K8s/zipkin-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: zas-zipkin-svc
  namespace: ${NAMESPACE}zasanddas
spec:
  selector:
    app: zas-zipkin
  ports:
    - protocol: TCP
      name: zipkin
      port: 9411
      targetPort: 9411
---
