K8s/app_ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zas-web-ingress
  namespace: ${NAMESPACE}zasanddas
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "affinity"
    nginx.ingress.kubernetes.io/session-cookie-expires: "14400"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "14400"
spec:
  rules:
  - host: "${SUBDOMAIN}zasanddas.duckdns.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zas-web-svc
            port:
              number: 8080
