K8s/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zas-grafana-ingress
  namespace: zasanddas
spec:
  rules:
  - host: "grafana.zasanddas.duckdns.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zas-grafana-svc
            port:
              number: 6000
---
