K8s/prom-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zas-prom-ingress
  namespace: zasanddas
spec:
  rules:
  - host: "prom.zasanddas.duckdns.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zas-prom-svc
            port:
              number: 9090
---
