K8s/zipkin-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zas-zipkin-ingress
  namespace: zasanddas
spec:
  rules:
  - host: "zipkin.zasanddas.duckdns.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zas-zipkin-svc
            port:
              number: 9090
---
